<resources>
    <string name="app_name">24PointsGame</string>
    <string name="clear_bnt">清空</string>
    <string name="compute_bnt">计算24点</string>
    <string name="play">PLAY</string>
    <string name="guide">guide</string>
    <string name="about_me">about me</string>
    <string name="about_me_mes">Author：徐聪\nPhone: 15330556587\nEmail: 2505327613@qq.com\ngithub: xclovehsy\nvision: 1.0</string>
    <string name="back">back</string>
    <string name="guide_mes">\t\t\t已知一副扑克牌有54张，去除大王和小王，剩余52张。\n\t\t\t游戏玩家在其中抽取4张牌，利用加减乘除进行计算得到24。\n\t\t\t进行计算是否能得到24. 如果可以，列出可能的计算表达式，可能有多种计算形式。</string>
    <string name="game_set">游戏设置</string>
    <string name="choose_image">选择图片</string>
    <string name="choose_dif">选择难度</string>
    <string name="game_name">24 points game</string>
</resources>