<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"
        android:layout_marginTop="80sp"
        android:textColor="@color/black"
        >
    </TextView>

    <TextView
        android:layout_marginTop="20sp"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:text="@string/guide_mes"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"

        android:textColor="@color/black"
        >
    </TextView>


    <Button
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/guide_back">
    </Button>


</LinearLayout>